--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Bubblegum+Sans&display=swap");
 
 body {
-    background: #fdfff4;
+    background: azure;
     font-family: sans-serif;
 }
 
