--- a/html/index.css
+++ b/html/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Bubblegum+Sans&display=swap");
 
 body {
-    background: #fdfff4;
+    background: azure;
     font-family: sans-serif;
 }
 
@@ -16,18 +16,12 @@ h2 {
 }
 
 h1 {
-    /* I don't want red anymore, I want it to be blue!
-  Help me change it! */
     color: red;
     font-size: 3em;
     text-align: center;
 }
 
-/* How can I make my other section titles blue too? */
-
 .fireworks {
     text-align: center;
-    /* Can you help me make my fireworks bigger? */
-    /* How about smaller? */
     font-size: 4em;
 }
